Update the userm api
