# openapi/userm.json
@@ -45,7 +45,7 @@
             "content" : {
               "application/json" : {
                 "schema" : {
-                  "$ref" : "#/components/schemas/DecoratedUser"
+                  "$ref" : "#/components/schemas/User"
                 }
               }
             }
@@ -93,7 +93,7 @@
             "content" : {
               "application/json" : {
                 "schema" : {
-                  "$ref" : "#/components/schemas/DecoratedUser"
+                  "$ref" : "#/components/schemas/User"
                 }
               }
             }
@@ -129,8 +129,30 @@
   },
   "components" : {
     "schemas" : {
-      "DecoratedUser" : {
-        "required" : [ "_links", "email", "id", "name", "username", "version" ],
+      "Group" : {
+        "type" : "object",
+        "properties" : {
+          "id" : {
+            "type" : "integer",
+            "format" : "int32"
+          },
+          "name" : {
+            "type" : "string"
+          },
+          "description" : {
+            "type" : "string"
+          },
+          "product" : {
+            "type" : "string"
+          },
+          "version" : {
+            "type" : "integer",
+            "format" : "int32"
+          }
+        }
+      },
+      "User" : {
+        "required" : [ "email", "id", "name", "username", "version" ],
         "type" : "object",
         "properties" : {
           "id" : {
@@ -187,29 +209,62 @@
           }
         }
       },
-      "Group" : {
+      "UserLinks" : {
+        "required" : [ "perms" ],
         "type" : "object",
         "properties" : {
-          "id" : {
-            "type" : "integer",
-            "format" : "int32"
-          },
-          "name" : {
+          "self" : {
             "type" : "string"
           },
-          "description" : {
+          "update" : {
             "type" : "string"
           },
-          "product" : {
+          "assignSubstitute" : {
             "type" : "string"
           },
-          "version" : {
-            "type" : "integer",
-            "format" : "int32"
+          "addTo" : {
+            "type" : "string"
+          },
+          "removeFrom" : {
+            "type" : "string"
+          },
+          "delete" : {
+            "type" : "string"
+          },
+          "perms" : {
+            "type" : "string"
+          },
+          "assign-substitute" : {
+            "type" : "string",
+            "deprecated" : true
+          },
+          "add-to" : {
+            "type" : "string",
+            "deprecated" : true
+          },
+          "remove-from" : {
+            "type" : "string",
+            "deprecated" : true
           }
         }
       },
-      "User" : {
+      "FieldError" : {
+        "type" : "object",
+        "properties" : {
+          "errorType" : {
+            "type" : "string",
+            "enum" : [ "MANDATORY", "NON_UNIQUE", "INVALID_FORMAT", "SHORT_DATA", "INVALID_PRODUCT", "DATA_TOO_LONG", "USER_NOT_FOUND", "INVALID_SUBSTITUTE_USER", "NOT_ALLOWED" ]
+          },
+          "fieldName" : {
+            "type" : "string"
+          },
+          "message" : {
+            "type" : "string"
+          }
+        }
+      },
+      "UpdateUserRequest" : {
+        "required" : [ "email", "id", "name", "username" ],
         "type" : "object",
         "properties" : {
           "id" : {
@@ -260,105 +315,6 @@
           },
           "passwordCleared" : {
             "type" : "boolean"
-          }
-        }
-      },
-      "UserLinks" : {
-        "required" : [ "perms" ],
-        "type" : "object",
-        "properties" : {
-          "self" : {
-            "type" : "string"
-          },
-          "update" : {
-            "type" : "string"
-          },
-          "assignSubstitute" : {
-            "type" : "string"
-          },
-          "addTo" : {
-            "type" : "string"
-          },
-          "removeFrom" : {
-            "type" : "string"
-          },
-          "delete" : {
-            "type" : "string"
-          },
-          "perms" : {
-            "type" : "string"
-          },
-          "assign-substitute" : {
-            "type" : "string",
-            "deprecated" : true
-          },
-          "remove-from" : {
-            "type" : "string",
-            "deprecated" : true
-          },
-          "add-to" : {
-            "type" : "string",
-            "deprecated" : true
-          }
-        }
-      },
-      "FieldError" : {
-        "type" : "object",
-        "properties" : {
-          "errorType" : {
-            "type" : "string",
-            "enum" : [ "MANDATORY", "NON_UNIQUE", "INVALID_FORMAT", "SHORT_DATA", "INVALID_PRODUCT", "DATA_TOO_LONG", "USER_NOT_FOUND", "INVALID_SUBSTITUTE_USER", "NOT_ALLOWED" ]
-          },
-          "fieldName" : {
-            "type" : "string"
-          },
-          "message" : {
-            "type" : "string"
-          }
-        }
-      },
-      "UpdateUserRequest" : {
-        "required" : [ "email", "name" ],
-        "type" : "object",
-        "properties" : {
-          "name" : {
-            "type" : "string"
-          },
-          "usernameAD" : {
-            "type" : "string"
-          },
-          "email" : {
-            "type" : "string"
-          },
-          "contact" : {
-            "type" : "string"
-          },
-          "password" : {
-            "type" : "string",
-            "writeOnly" : true
-          },
-          "substitute" : {
-            "$ref" : "#/components/schemas/User"
-          },
-          "version" : {
-            "type" : "integer",
-            "format" : "int32"
-          },
-          "groups" : {
-            "type" : "array",
-            "items" : {
-              "$ref" : "#/components/schemas/Group"
-            }
-          },
-          "state" : {
-            "type" : "string",
-            "enum" : [ "enabled", "disabled" ]
-          },
-          "substitutedUsers" : {
-            "type" : "array",
-            "items" : {
-              "$ref" : "#/components/schemas/User"
-            }
           }
         }
       }
